Bug 1545090 - Part 1: Don't call PeerConnectionMedia::addIceCandidate for the end-of-candidates case. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D28418

--HG--
extra : moz-landing-system : lando